welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:88: error: not found: value faireV4
  faireV4(Color.GREEN)
  ^